* Rename ChangeLog into NEWS and add myself to AUTHORS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
+Sam Hocevar <sam@.zoy.org
+  - Debian package maintainer, current code maintainer.
+
 Anthony Kruize <trandor@labyrinth.net.au>
   - SDL port maintainer.
 
