Update my e-mail address and the bootstrap script.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Sam Hocevar <sam@.zoy.org>
+Sam Hocevar <sam@hocevar.net>
   - Debian package maintainer, current code maintainer.
 
 Anthony Kruize <trandor@labyrinth.net.au>
