--- a/INSTALL
+++ b/INSTALL
@@ -1,28 +1,28 @@
-Requirements for Compiling
+Requirements for compiling
 --------------------------
+
 - SDL 1.1.6 <http://www.libsdl.org>
-- X11R6(or above) and libraries.
-- Linux kernel 2.2 or above.
+- SDL-Mixer
 - GL libraries and headers are required for OpenGL support.
 
 
 Compiling
 ---------
 
-1. Untar the abuse_sdl-x.x.tar.gz file.
+1. Untar the abuse-x.x.tar.gz file.
 
-     tar -zxf abuse_sdl-x.x.tar.gz
+     tar xzf abuse-x.x.tar.gz
 
-   This will create an abuse_sdl-x.x directory with the source in it.
+   This will create an abuse-x.x directory with the source in it.
 
 2. Run  './configure'
-   This will create the Makefiles required to build Abuse-SDL.
+   This will create the Makefiles required to build Abuse.
 
    If you wish to specify a location for the datafiles instead of using the
    default of '/usr/local/share/games/abuse', you can do so by passing the
    following argument to the configure script:
 
-     --datafir=<location>
+     --datadir=<location>
 
    where <location> is the directory where the datafiles will be installed.
 
@@ -30,18 +30,13 @@ Compiling
    This will start the build.
 
 4. Run 'make install'
-   This will install Abuse-SDL.
+   This will install Abuse.
 
 
-MacOSX
-------
+Mac OS X
+--------
+
 A Project Builder project is included in the 'osx' directory and can be used
 if desired.  Using project Builder is currently the only way to get OpenGL
 support compiled in.
 
-
-If anything goes wrong please contact me at <trandor@labyrinth.net.au> with
-the details, and I'll try and sort it out.
-
-Good luck,
-Anthony Kruize
