--- a/TODO
+++ b/TODO
@@ -1,12 +1,5 @@
 This is a list of known bugs and features that need fixing/implementing:
 
-BUGS
-----
-- On some systems, Abuse-SDL crashes during startup due to a NULL object.
-   (This is because of corrupt datafiles)
-- On some systems, Abuse-SDL will fail run, giving a 'BOSS_ANT has no value'
-  error. (See the README file for details on how to workaround this)
-
 FEATURES
 --------
 - Multiplayer support over the internet and local network using tcp/ip.
@@ -18,7 +11,6 @@ FEATURES
 SAM'S TODO
 ----------
  - replace write_PCX calls with SDL_WriteSurfaceBMP
- - is visobj.cpp really used?
 
 ABUSE-TOOL
 ----------
@@ -35,4 +27,31 @@ DATA MERGE
  - ensure gamma.lsp, hardness.lsp, defaults.prp, edit.lsp etc. are always
    loaded and saved in the config directory, not in the datadir (use
    local_load instead of load?). Same for addon/deathmat/cur_lev.lsp
+
+UNUSED FILES
+------------
+There may be interesting code in there:
+ - src/net:
+   - engine.cpp
+   - engine.h
+   - netdrv.cpp
+   - netdrv.h
+   - netfile.cpp
+   - netfile.h
+   - undrv.cpp
+ - src:
+   - control.cpp
+   - control.h
+   - fakelib.h
+   - go.cpp
+   - go.h
+   - newlight.cpp
+   - old.nfclient.cpp
+   - old.nfserver.cpp
+   - old_server.cpp
+   - oldhelp.cpp
+   - server2.cpp
+   - server2.h
+   - smoosh.cpp
+   - unixnfc.cpp
 
