--- a/TODO
+++ b/TODO
@@ -55,7 +55,13 @@ There may be interesting code in there:
 
 REFACTOR
 --------
-game_to_mouse : utiliser vec2i
+game_to_mouse : utiliser vec2i, ftile_on btile_on
 console::draw_char : pareil
 VolumeWindow::draw_vol plus grand !!
+
+dlastx, dlasty, x, y (apparemment des membres de object)
+last_demo_mx, last_demo_my
+get_fg ?
+snap_x() snap_y()
+scatter_line, ascatter_line
 
