--- a/TODO
+++ b/TODO
@@ -64,7 +64,6 @@ REFACTOR
 
 Jwindow::_x1 _x2
 
-JCFont::tl,th -> m_size
 sprite::x,y -> m_pos
 console::draw_char : vec2i
 VolumeWindow::draw_vol plus grand !!
@@ -74,6 +73,7 @@ snap_x() snap_y()
 scatter_line, ascatter_line
 xstart() / xend() etc.
 jwindow::area
+button::area
 
 refactor image::Line to merge loops
 
