lisp: make LObject::Eval a free function
This is necessary because in some places Eval() checks for the “this”
pointer and also stores it in the refcounting mechanism. This is all
a bit dangerous because in C++ the compiler can consider “this” to be
always non-null and thus optimise away some code.

--- a/TODO
+++ b/TODO
@@ -69,3 +69,12 @@ xstart() / xend() etc.
 jwindow::area
 button::area
 
+is this necessary before eval()?
+  while(*s==' ' || *s=='\t' || *s=='\r' || *s=='\n') s++;
+
+car(car(...)) -> caar ?
+
+replace CAR with lcar everywhere?
+
+LObject::compile -> lisp::compile
+
