lisp: implement caar, cadr, etc. getter variants

--- a/TODO
+++ b/TODO
@@ -72,5 +72,4 @@ button::area
 is this necessary before eval()?
   while(*s==' ' || *s=='\t' || *s=='\r' || *s=='\n') s++;
 
-car(car(...)) -> caar ?
-
+symbols at bottom of clist.h
